--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
@@ -7,6 +7,7 @@
     border-radius: 16px;
     background: var(--yellow-50);
     box-shadow: 4px 4px 16px rgba(63, 24, 5, 0.25);
+    gap: 24px;
 
     .card-nav {
         display: flex;
@@ -61,7 +62,7 @@
     .progress-bar {
         height: 2px;
         background: var(--purple-100);
-        margin: 24px 0;
+        /*margin: 0 0 24px 0;*/
 
         .progress {
             height: 2px;
@@ -94,13 +95,13 @@
         display: flex;
         flex-direction: column;
         flex: 1;
-        max-height: 448px;
+        max-height: 512px;
         gap: 24px;
     }
 
     footer {
         display: flex;
         justify-content: space-between;
-        margin-top: 34px;
+        /*margin-top: 34px;*/
     }
 }
