--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -6,8 +6,7 @@
                 <SparcLogo />
             </div>
             <div class="right">
-                <button id="ideas-btn" class="secondary-btn" @* @onclick='() => Navigate("/ideas")' *@>Ideas</button>
-                @* <button class="secondary-btn">Button</button> *@
+                <button id="ideas-btn" class="secondary-btn">Ideas</button>
             </div>
         }
         else
@@ -19,9 +18,8 @@
                 <input type="text" placeholder="Search" class="input-text" />
             </div>
             <div class="right">
-                <button><ExploreIcon /> <span>Explore</span></button>
-                <button><FilterIcon /> <span>Filter</span></button>
-                <button class="add-btn" @onclick="ToggleAddCard"><AddIcon /> <span>Add</span></button>
+                <button class="add-btn" @onclick="() => OpenAddCard(0)"><LightbulbIcon /> <span>Share Idea</span></button>
+                <button class="add-btn" @onclick="() => OpenAddCard(1)"><DollarIcon />  <span>Donate</span></button>
             </div>
         }
     </div>
@@ -30,22 +28,24 @@
 @if (ShowAddCard)
 {
     <div class="modal-overlay" @onclick:stopPropagation>
-        <AddCard OnClose="CloseAddCard" />
+        <AddCard OnClose="CloseAddCard" SelectedHeaderButton="@SelectedHeaderButton" />
     </div>
 }
 
 @code {
     private bool ShowAddCard = false;
     private bool IsHomePage => Nav.Uri.EndsWith("/");
+    private int SelectedHeaderButton = 0;
 
     private void Navigate(string path)
     {
         Nav.NavigateTo(path);
     }
 
-    private void ToggleAddCard()
+    private void OpenAddCard(int headerIndex)
     {
-        ShowAddCard = !ShowAddCard;
+        SelectedHeaderButton = headerIndex;
+        ShowAddCard = true;
     }
 
     private void CloseAddCard(bool shouldClose)
@@ -53,10 +53,5 @@
         if (shouldClose)
             ShowAddCard = false;
     }
-
-    // private void CancelAddCard()
-    // {
-    //     
-    // }
 }
 
