--- a/Sparc2/Sparc2/Donations/AddDonation.razor.scss
+++ b/Sparc2/Sparc2/Donations/AddDonation.razor.scss
@@ -1,45 +1,8 @@
-﻿.form ::deep form {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    width: 100%;
-    height: 100%;
-
+﻿form {
     label {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
         font-size: 1.2rem;
         font-weight: 600;
         letter-spacing: -0.12px;
-        flex-grow: 1;
-
-        span {
-            display: flex;
-
-            &.required {
-                color: var(--red);
-            }
-        }
-
-        textarea,
-        input {
-            border-radius: 16px;
-            border: 1px solid var(--gray-100);
-            background: var(--yellow-50);
-        }
-
-        textarea {
-            padding: 16px;
-            resize: none;
-            height: 100%;
-            flex-grow: 1;
-        }
-
-        input {
-            padding: 8px 16px;
-            height: 22px;            
-        }
     }
 
     button {
@@ -51,7 +14,7 @@
         font-size: 1.6rem;
 
         &.selected {
-            box-shadow: 0px 0px 8px rgba(178, 116, 250, 0.25);
+            box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
             border-color: var(--purple-900);
             color: var(--purple-900);
 
@@ -68,30 +31,15 @@
     justify-content: center;
 
     ::deep form {
+        width: 100%;
+        height: fit-content;
+        margin: auto 0;
+        display: flex;
+        flex-direction: column;
         gap: 24px;
-    }
-}
 
-.payment-form {
-    overflow-y: auto;
-
-    ::deep form {
-        gap: 12px;
-
-        .two-slots {
-            display: flex;
-            flex-direction: row;
-            gap: 12px;
-            width: 100%;
-
-            label {
-                flex: 1;
-                min-width: 0;
-            }
-
-            &:first-of-type {
-                margin: 12px 0;
-            }
+        input {
+            width: calc(100% - 24px);
         }
     }
 }
@@ -104,15 +52,15 @@
 
 .btn-group {
     display: flex;
-    flex-direction: row;
     gap: 4px;
+    flex-direction: row;
 
     button {
         flex: 1;
         justify-content: center;
         display: flex;
-        align-items: center;
         gap: 4px;
+        align-items: center;
     }
 }
 
@@ -120,6 +68,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 4px;
+
 
     button {
         width: 100%;
@@ -130,69 +79,101 @@
         position: relative;
         grid-column: span 3;
 
-        ::deep {
-            svg {
-                position: absolute;
-                top: 50%;
-                left: 12px;
-                transform: translateY(-50%);
-                pointer-events: none;
-                z-index: 1;
-                width: 16px;
-                height: 16px;
-                transition: stroke 0.3s;
-            }
-
-            input {
-                height: 22px;
-                padding: 8px 12px;
-                border-radius: 16px;
-                border: 1px solid var(--gray-100);
-                background: var(--yellow-50);
-                text-align: right;
-                -moz-appearance: textfield;
-                width: calc(100% - 24px);
-
-                &::placeholder {
-                    color: var(--gray-600);
-                    font-weight: 450;
-                }
-
-                &::-webkit-inner-spin-button,
-                &::-webkit-outer-spin-button {
-                    -webkit-appearance: none;
-                    margin: 0;
-                }
-            }
+        ::deep svg {
+            position: absolute;
+            top: 50%;
+            left: 12px;
+            transform: translateY(-50%);
+            pointer-events: none;
+            z-index: 1;
+            width: 16px;
+            height: 16px;
+            transition: stroke 0.3s;
         }
-    }
 
-    .currency-input:focus-within {
         ::deep input {
-            outline: none;
-            border-color: var(--purple-900);
+            height: 22px;
+            padding: 8px 12px;
+            -moz-appearance: textfield;
+            border-radius: 16px;
+            border: 1px solid var(--gray-100);
+            background: var(--yellow-50);
+            text-align: right;
 
-            &::placeholder {
-                color: var(--purple-900);
+            &::-webkit-inner-spin-button,
+            &::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            :deep(input::placeholder) {
+                color: var(--gray-600);
+                font-weight: 450;
             }
         }
+    }
+}
 
-        ::deep svg path {
-            stroke: var(--purple-900);
+.currency-input:focus-within {
+    ::deep input {
+        outline: none;
+        border: 1px solid var(--purple-900);
+
+        :deep(input::placeholder) {
+            color: var(--purple-900);
         }
     }
-}
 
-::deep form > *:last-child {
-    margin-bottom: 0;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
+    ::deep svg path {
+        stroke: var(--purple-900);
     }
 
-    100% {
-        opacity: 1;
+    :deep(input::placeholder) {
+        color: var(--purple-900);
+    }
+}
+
+.payment-form {
+    overflow-y: auto;
+
+    label {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        margin-bottom: 12px;
+
+        span {
+            font-size: 1.2rem;
+            font-weight: 600;
+            letter-spacing: -0.12px;
+        }
+
+        .required {
+            color: var(--red);
+        }
+
+        ::deep input {
+            border-radius: 16px;
+            border: 1px solid var(--gray-100);
+            background: var(--yellow-50);
+            padding: 8px 16px;
+            height: 22px;
+        }
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+
+    .expiration {
+        display: flex;
+        gap: 12px;
+        flex-direction: row;
+        width: 100%;
+
+        label {
+            flex: 1;
+            min-width: 0;
+        }
     }
 }
