apply grid to explore ideas page

--- a/Sparc2/Sparc2/Ideas/IdeasPage.razor
+++ b/Sparc2/Sparc2/Ideas/IdeasPage.razor
@@ -3,10 +3,12 @@
 
 <PageTitle>Ideas | Sparc</PageTitle>
 
-<article>
+<article class="explore draggable">
     @foreach (var idea in ProjectIdeas)
     {
-        <IdeaCard @key="idea.Id" Idea=@idea OnOpenFullView="OpenFullIdea" />
+        <div class="card-container draggable">
+            <IdeaCard @key="idea.Id" Idea=@idea OnOpenFullView="OpenFullIdea" />
+        </div>
     }
     @if (ShowFullIdeaCard)
     {
