--- a/Sparc2/Sparc2/Shared/PageLayout.razor
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor
@@ -10,3 +10,21 @@
     <div class="background-image"></div>
     <div class="background-noise"></div>
 </div>
+
+<style>
+    body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: var(--purple-50);
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    }
+</style>
+
+<script>
+    setTimeout(() => {
+        findCenter();
+    } , 500);
+</script>
