--- a/Sparc2/Sparc2/Ideas/IdeasPage.razor.scss
+++ b/Sparc2/Sparc2/Ideas/IdeasPage.razor.scss
@@ -1,7 +1,20 @@
 article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200vw;
-    height: 200vh;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 120px;
+    row-gap: 60px;
+    width: fit-content;
+    height: fit-content;
+    padding: 120px 60px;
+
+    .card-container {
+        height: 700px;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+
+        &:nth-of-type(2n+1) {
+            align-items: end;
+        }
+    }
 }
