--- a/Sparc2/Sparc2/Shared/PageLayout.razor.scss
+++ b/Sparc2/Sparc2/Shared/PageLayout.razor.scss
@@ -4,6 +4,8 @@ body {
     justify-content: center;
     background: var(--purple-50);
     position: relative;
+    width: fit-content;
+    height: fit-content;
 }
 
 main {
@@ -11,11 +13,13 @@ main {
     margin: auto 0;
     z-index: 50;
     animation: fadeIn 2s ease-in-out;
+    width: fit-content;
+    height: fit-content;
 }
 
 .background {
-    width: 200vw;
-    height: 200vh;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
